// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateIndexPatternWizard defaults to the loading state 1`] = `
<Fragment>
  <LoadingState />
  <EuiGlobalToastList
    dismissToast={[Function]}
    side="right"
    toastLifeTimeMs={6000}
    toasts={Array []}
  />
</Fragment>
`;

exports[`CreateIndexPatternWizard renders index pattern step when there are indices 1`] = `
<Fragment>
  <EuiPageContent>
    <Header
      docLinks={
        Object {
          "links": Object {
            "indexPatterns": Object {},
            "scriptedFields": Object {},
          },
        }
      }
      indexPatternName="name"
      isBeta={false}
      prompt={null}
    />
    <EuiHorizontalRule />
    <StepIndexPattern
      allIndices={
        Array [
          Object {
            "name": "myIndexPattern",
          },
        ]
      }
      goToNextStep={[Function]}
      indexPatternCreationType={
        IndexPatternCreationConfig {
          "httpClient": null,
          "isBeta": false,
          "key": "default",
          "name": "name",
          "showSystemIndices": true,
          "type": "default",
        }
      }
      showSystemIndices={true}
    />
  </EuiPageContent>
  <EuiGlobalToastList
    dismissToast={[Function]}
    side="right"
    toastLifeTimeMs={6000}
    toasts={Array []}
  />
</Fragment>
`;

exports[`CreateIndexPatternWizard renders the empty state when there are no indices 1`] = `
<Fragment>
  <EmptyState
    onRefresh={[Function]}
    prependBasePath={[Function]}
  />
  <EuiGlobalToastList
    dismissToast={[Function]}
    side="right"
    toastLifeTimeMs={6000}
    toasts={Array []}
  />
</Fragment>
`;

exports[`CreateIndexPatternWizard renders time field step when step is set to 2 1`] = `
<Fragment>
  <EuiPageContent>
    <Header
      docLinks={
        Object {
          "links": Object {
            "indexPatterns": Object {},
            "scriptedFields": Object {},
          },
        }
      }
      indexPatternName="name"
      isBeta={false}
      prompt={null}
    />
    <EuiHorizontalRule />
    <StepTimeField
      createIndexPattern={[Function]}
      goToPreviousStep={[Function]}
      indexPattern=""
      indexPatternCreationType={
        IndexPatternCreationConfig {
          "httpClient": null,
          "isBeta": false,
          "key": "default",
          "name": "name",
          "showSystemIndices": true,
          "type": "default",
        }
      }
    />
  </EuiPageContent>
  <EuiGlobalToastList
    dismissToast={[Function]}
    side="right"
    toastLifeTimeMs={6000}
    toasts={Array []}
  />
</Fragment>
`;

exports[`CreateIndexPatternWizard renders when there are no indices but there are remote clusters 1`] = `
<Fragment>
  <EuiPageContent>
    <Header
      docLinks={
        Object {
          "links": Object {
            "indexPatterns": Object {},
            "scriptedFields": Object {},
          },
        }
      }
      indexPatternName="name"
      isBeta={false}
      prompt={null}
    />
    <EuiHorizontalRule />
    <StepIndexPattern
      allIndices={Array []}
      goToNextStep={[Function]}
      indexPatternCreationType={
        IndexPatternCreationConfig {
          "httpClient": null,
          "isBeta": false,
          "key": "default",
          "name": "name",
          "showSystemIndices": true,
          "type": "default",
        }
      }
      showSystemIndices={true}
    />
  </EuiPageContent>
  <EuiGlobalToastList
    dismissToast={[Function]}
    side="right"
    toastLifeTimeMs={6000}
    toasts={Array []}
  />
</Fragment>
`;

exports[`CreateIndexPatternWizard shows system indices even if there are no other indices if the include system indices is toggled 1`] = `
<Fragment>
  <EmptyState
    onRefresh={[Function]}
    prependBasePath={[Function]}
  />
  <EuiGlobalToastList
    dismissToast={[Function]}
    side="right"
    toastLifeTimeMs={6000}
    toasts={Array []}
  />
</Fragment>
`;
